# extorch

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
extorch/: __init__.py  conv1d.py  conv1d_test.py  convt1d.py  convt1d_test.py  padding.py  padding_test.py  transpose.py  transpose_test.py
test/: conv1d_test.py  transpose_test.py
