[tool.poetry]
name = "extorch"
version = "0.0.2"
description = "Extended PyTorch modules"
authors = ["Tarepan"]
readme = "README.md"
repository = "https://github.com/tarepan/extorch"

[tool.poetry.dependencies]
python = "^3.7"
torch = "*"

[tool.poetry.dev-dependencies]
numpy = ">=1.17"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
  "line-too-long",
]